# gitsql

./: .gitignore  CMakeLists.txt
scripts/: format.py
scripts/.git-hooks/: pre-commit
src/: CMakeLists.txt  GitModule.cpp  GitModule.h  GitVirtualTable.cpp  GitVirtualTable.h  GitVirtualTableCursor.cpp  GitVirtualTableCursor.h  Sqlite.cpp  Sqlite.h  SqliteModule.cpp  SqliteModule.h  SqliteVirtualTable.h  SqliteVirtualTableCursor.h  main.cpp
